--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,10 @@
 }
 
 body {
-  margin: -7px;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   padding: 0;
 }
 
